chore(chat): small overlap fix

--- a/packages/chat/components/historyViewer/src/historyViewer.scss
+++ b/packages/chat/components/historyViewer/src/historyViewer.scss
@@ -14,16 +14,12 @@ $css--plex: true !default;
 :host(#{$clabs-prefix}-chat-history-viewer) {
   .#{$clabs-prefix}--chat-history-viewer-container {
     box-sizing: border-box;
-    padding: 16px;
     background: $background;
     block-size: 600px;
-    inline-size: 100px;
   }
 
   .#{$clabs-prefix}--chat-history-viewer-container-tree {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     block-size: 100%;
     inline-size: 100%;
   }
@@ -31,27 +27,23 @@ $css--plex: true !default;
   .#{$clabs-prefix}--chat-history-viewer-grid {
     display: flex;
     flex-wrap: wrap;
-  }
-  .#{$clabs-prefix}--chat-history-viewer-message {
-    margin: 5px;
+    block-size: 100%;
+    inline-size: 100%;
   }
 
   .#{$clabs-prefix}--chat-history-viewer-column {
     flex-flow: column wrap;
   }
 
-  .#{$clabs-prefix}--chat-history-viewer-block {
-    position: relative;
-    margin-block-start: 20px;
+  .#{$clabs-prefix}--chat-history-viewer-message {
+    overflow: scroll hidden;
+    margin: 5px;
+    margin-inline-start: 8px;
+    max-inline-size: 100px;
+    white-space: nowrap;
   }
-  .#{$clabs-prefix}--chat-history-viewer-block::after {
-    position: absolute;
-    background: $background;
-    block-size: 2px;
-    content: '';
-    inline-size: 20px;
-    inset-block-start: 50%;
-    inset-inline-start: -20px;
+  .#{$clabs-prefix}--chat-history-viewer-empty {
+    min-block-size: 22px;
   }
   .#{$clabs-prefix}--chat-history-viewer-block-content-user {
     padding: 2px;
